Fix picture element causing stretched images
<picture> is inline by default, breaking width:100% on the img inside.
Add display:block; width:100% to .phone-frame picture and .feature-screenshot picture.

--- a/css/main.css
+++ b/css/main.css
@@ -1069,6 +1069,10 @@ img {
   margin: 8px auto 12px;
 }
 
+.phone-frame picture {
+  display: block;
+  width: 100%;
+}
 .phone-frame-img {
   width: 100%;
   display: block;
@@ -1228,6 +1232,11 @@ img {
   overflow: hidden;
 }
 
+.feature-screenshot picture {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 .feature-img {
   width: 100%;
   height: 100%;
